projects section and begining of studies section
- project section finished for 3 projects (content not accurate)
- utbm part of studies section working
- tag are not yet in projects
- transition of date could be upgraded (change of flex-direction does not have transition and the line transition is weird when activated)

--- a/index.html
+++ b/index.html
@@ -17,16 +17,70 @@
             <img id="front-img" src="media/front_picture.jpg">
             <div id="front-text">
                 <h1>MIRA Victor</h1>
-                <p>Last year engineering student in computer science, mainly focused on Artificial Intelligence and Web Development</p>
+                <div id="about-me-desc">
+                    <p>Last year engineering student<br> in computer science, mainly<br>focused on Artificial Intelligence<br>and Web Development</p>
+                    <p id="chevron">></p>
+                </div>
             </div>
         </div>
         <div id="projects">
-            <li>
+            <h2 class="section-title" id="projects-title">Projects</h2>
+            <div id="project-list">
+                <div class="project-container">
+                    <img src="media/objects_detection.png">
+                    <div class="project-text">
+                        <h3 class="project-title">Items detector with openCV ></h3>
+                        <div class="project-description">
+                            <p >
+                                Image treatment and comparison with a base image to detect new items on the floor in order to prevent accident for elder living alone
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="project-container">
+                    <img src="media/objects_detection.png">
+                    <div class="project-text">
+                        <h3 class="project-title">Items detector with openCV ></h3>
+                        <div class="project-description">
+                            <p >
+                                Image treatment and comparison with a base image to detect new items on the floor in order to prevent accident for elder living alone
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="project-container">
+                    <img src="media/objects_detection.png">
+                    <div class="project-text">
+                        <h3 class="project-title">Items detector with openCV ></h3>
+                        <div class="project-description">
+                            <p >
+                                Image treatment and comparison with a base image to detect new items on the floor in order to prevent accident for elder living alone
+                            </p>
+                        </div>
+                    </div>
+                </div>
 
-            </li>
+            </div>
         </div>
-        <div id="studies">
 
+        <div id="studies">
+            <h2 class="section-title" id="studies-title">Studies</h2>
+            <div id="utbm">
+                <img src="media/utbm_logo.png">
+                <div id="utbm-desc">
+                    <h3>UTBM</h3>
+                    <div class="date">
+                        <p class="date1">2017</p>
+                        <div class="line"></div>
+                        <p class="date2">2023</p>
+                    </div>
+                    <p class="school-desc">
+                        CS Engineering Diploma <br>
+                        CS Bachelor<br>
+                        Bulats C1 certification<br>
+                    </p>
+                </div>
+            </div>
         </div>
         <div id="work-experiences">
 
