--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div id="about-me">
             <img id="front-img" src="media/front_picture.jpg">
             <div id="front-text">
-                <h1>MIRA Victor</h1>
+                <h1>Victor MIRA</h1>
                 <div id="about-me-desc">
                     <p>Last year engineering student<br> in computer science, mainly<br>focused on Artificial Intelligence<br>and Web Development</p>
                     <p id="chevron">></p>
@@ -65,20 +65,54 @@
 
         <div id="studies">
             <h2 class="section-title" id="studies-title">Studies</h2>
-            <div id="utbm">
-                <img src="media/utbm_logo.png">
-                <div id="utbm-desc">
-                    <h3>UTBM</h3>
-                    <div class="date">
-                        <p class="date1">2017</p>
-                        <div class="line"></div>
-                        <p class="date2">2023</p>
+            <div id="studies-cards">
+                <div id="utbm" class="univ">
+                    <img src="media/utbm_logo.png">
+                    <div id="utbm-desc" class="univ-desc">
+                        <h3 class="univ-title">UTBM</h3>
+                        <div class="date" id="utbm-date">
+                            <p class="date1" id="utbm-date1">2017</p>
+                            <div class="line"></div>
+                            <p class="date2" id="utbm-date2">2023</p>
+                        </div>
+                        <p class="school-desc">
+                            CS Engineering Diploma <br>
+                            CS Bachelor<br>
+                            Bulats C1 certification<br>
+                        </p>
                     </div>
-                    <p class="school-desc">
-                        CS Engineering Diploma <br>
-                        CS Bachelor<br>
-                        Bulats C1 certification<br>
-                    </p>
+                </div>
+                <div id="famnit" class="univ">
+                    <img src="media/famnit_logo__just_UP.png">
+                    <div id="famnit-desc" class="univ-desc">
+                        <div class="univ-title">
+                            <h3>FAMNIT</h3>
+                            <h4>University of primorska</h4>
+                        </div>
+                        <div class="date" id="famnit-date">
+                            <p class="date1" id="famnit-date1">Fev-Jun</p>
+                            <p class="date2" id="famnit-date2">2018</p>
+                        </div>
+                        <p class="school-desc">
+                            Erasmus + in Slovenia <br>
+                            CS bachelor programm <br>
+                        </p>
+                    </div>
+                </div>
+                <div id="uqac" class="univ">
+                    <img src="media/universite-du-quebec-logo-couleur-2022-UQ.png">
+                    <div id="uqac-desc" class="univ-desc">
+                        <h3 class="univ-title">UQAC</h3>
+                        <div class="date" id="uqac-date">
+                            <p class="date1" id="uqac-date1">2022</p>
+                            <div class="line"></div>
+                            <p class="date2" id="uqac-date2">2023</p>
+                        </div>
+                        <p class="school-desc">
+                            International Exchange<br>
+                            Master in CS<br>
+                        </p>
+                    </div>
                 </div>
             </div>
         </div>
