work experience finished
added works 3 cards
added relative arrow

--- a/index.html
+++ b/index.html
@@ -62,7 +62,6 @@
 
             </div>
         </div>
-
         <div id="studies">
             <h2 class="section-title" id="studies-title">Studies</h2>
             <div id="studies-cards">
@@ -117,11 +116,56 @@
             </div>
         </div>
         <div id="work-experiences">
-
+            <h2 class="section-title" id="work-experineces-title">Work Experiences</h2>
+            <div id="arrow-container">
+                <div id="arrow">
+                    <div id="arrow-line"></div>
+                    <div id="arrow-chevron"></div>
+                </div>
+            </div>
+            <div id="work-cards">
+                <div id="army" class="enterprise">
+                    <img src="media/logo_armee_terre.png">
+                    <div class="enterprise-desc">
+                        <h3 class="enterprise-title">FRENCH ARMY</h3>
+                        <p class="date">2021 - Now</p>
+                        <p class="work-desc">
+                            Quick Reaction Force Member<br>
+                            Group first aider<br>
+                        </p>
+                    </div>
+                </div>
+                <div id="socgen" class="enterprise">
+                    <img src="media/Societe-Generale-Logo_only.png">
+                    <div class="enterprise-desc">
+                        <h3 class="enterprise-title">SOCIETE GENERALE</h3>
+                        <p class="date">2021 - 2022</p>
+                        <p class="work-desc">
+                            4th year Internship: backend developer<br>
+                            Designer-Developer (during summer)<br>
+                        </p>
+                    </div>
+                </div>
+                <div id="mage" class="enterprise">
+                    <img src="media/mu_cymk_03.png">
+                    <div class="enterprise-desc">
+                        <h3 class="enterprise-title">MAGE-UQAC</h3>
+                        <p class="date">2023</p>
+                        <p class="work-desc">
+                            Educational affairs coordinator<br>
+                        </p>
+                    </div>
+                </div>
+            </div>
         </div>
-        <div id="contact">
-
-        </div>
+        <footer id="contact">
+            <li>
+                <ul>linked in</ul>
+                <ul>github</ul>
+                <ul>+33 6 27 24 66 84</ul>
+                <ul>victor.romain.mira@gmail.com</ul>
+            </li>
+        </footer>
     </div>
 </body>
 </html>
