--- a/index.html
+++ b/index.html
@@ -160,10 +160,10 @@
         </div>
         <footer id="contact">
             <li>
-                <ul>linked in</ul>
-                <ul>github</ul>
-                <ul>+33 6 27 24 66 84</ul>
-                <ul>victor.romain.mira@gmail.com</ul>
+                <ul><img src="media/linkedin-logo.png"><p>victor-mira-56b255174</p></ul>
+                <ul><img src="media/github-logo.png"><p>victor-mira</p></ul>
+                <ul><img src="media/phone.png"> <p>+33 6 27 24 66 84</p></ul>
+                <ul><img src="media/mail.png"><p>victor.romain.mira@gmail.com</p></ul>
             </li>
         </footer>
     </div>
