--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div id="projects">
             <h2 class="section-title" id="projects-title">Projects</h2>
             <div id="project-list">
-                <div class="project-container">
+                <div id="openCVDetector" class="project-container">
                     <img src="media/objects_detection.png">
                     <div class="project-text">
                         <h3 class="project-title">Items detector with openCV ></h3>
@@ -59,6 +59,7 @@
                         </div>
                     </div>
                 </div>
+
 
             </div>
         </div>
@@ -160,12 +161,14 @@
         </div>
         <footer id="contact">
             <li>
-                <ul><img src="media/linkedin-logo.png"><p>victor-mira-56b255174</p></ul>
-                <ul><img src="media/github-logo.png"><p>victor-mira</p></ul>
-                <ul><img src="media/phone.png"> <p>+33 6 27 24 66 84</p></ul>
-                <ul><img src="media/mail.png"><p>victor.romain.mira@gmail.com</p></ul>
+                <ul id="linkedin"><img src="media/linkedin-logo.png"><p>victor-mira-56b255174</p></ul>
+                <ul id="github"><img src="media/github-logo.png"><p>victor-mira</p></ul>
+                <ul id="phone-number"><img src="media/phone.png"> <p>+33 6 27 24 66 84</p></ul>
+                <ul id="mail"><img src="media/mail.png"><p>victor.romain.mira@gmail.com</p></ul>
             </li>
         </footer>
     </div>
+    <script src="script.js"></script>
+
 </body>
 </html>
