project links and fixs
- added the 6 main projects
- added links on projects
- fixed the height problem of studies
- fixed le position of work experiencies
- added footer fixed position on scroll

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div id="projects">
             <h2 class="section-title" id="projects-title">Projects</h2>
             <div id="project-list">
-                <div id="openCVDetector" class="project-container">
+                <div id="opencv-detector" class="project-container">
                     <img src="media/objects_detection.png">
                     <div class="project-text">
                         <h3 class="project-title">Items detector with openCV ></h3>
@@ -37,24 +37,57 @@
                         </div>
                     </div>
                 </div>
-                <div class="project-container">
-                    <img src="media/objects_detection.png">
+                <div id="trafic-cnn" class="project-container">
+                    <img src="media/traffic_signs.jpg">
                     <div class="project-text">
-                        <h3 class="project-title">Items detector with openCV ></h3>
+                        <h3 class="project-title">Trafic signs classification ></h3>
                         <div class="project-description">
                             <p >
-                                Image treatment and comparison with a base image to detect new items on the floor in order to prevent accident for elder living alone
+                                CNN classifier model trained on 57 different traffic signs
                             </p>
                         </div>
                     </div>
                 </div>
-                <div class="project-container">
-                    <img src="media/objects_detection.png">
+                <div id="optiski" class="project-container">
+                    <img src="media/optiski.jpg">
+                    <div class="project-text">
+                        <h3 class="project-title">Optiski android application ></h3>
+                        <div class="project-description">
+                            <p >
+                                Android application generating a ski route depending on ski-level and available time
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div id="opencv-segmentation" class="project-container">
+                    <img src="media/opencv_segmentation.jpg">
                     <div class="project-text">
                         <h3 class="project-title">Items detector with openCV ></h3>
                         <div class="project-description">
                             <p >
-                                Image treatment and comparison with a base image to detect new items on the floor in order to prevent accident for elder living alone
+                                Segmentation of rocks with image pretreament and watershed method
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div id="anime-vae" class="project-container">
+                    <img src="media/anime_vae.png">
+                    <div class="project-text">
+                        <h3 class="project-title">Anime face VAE ></h3>
+                        <div class="project-description">
+                            <p >
+                                Virtual Auto-Encoder for anime face generation
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div id="portfolio" class="project-container">
+                    <img src="media/portfolio.png">
+                    <div class="project-text">
+                        <h3 class="project-title">Portfolio ></h3>
+                        <div class="project-description">
+                            <p >
+                                HTML/CSS/JS portfolio presenting the most important experiences I had and my main projects
                             </p>
                         </div>
                     </div>
@@ -75,11 +108,13 @@
                             <div class="line"></div>
                             <p class="date2" id="utbm-date2">2023</p>
                         </div>
-                        <p class="school-desc">
-                            CS Engineering Diploma <br>
-                            CS Bachelor<br>
-                            Bulats C1 certification<br>
-                        </p>
+                        <div class="school-desc-container">
+                            <p class="school-desc">
+                                CS Engineering Diploma <br>
+                                CS Bachelor<br>
+                                Bulats C1 certification<br>
+                            </p>
+                        </div>
                     </div>
                 </div>
                 <div id="famnit" class="univ">
@@ -93,10 +128,12 @@
                             <p class="date1" id="famnit-date1">Fev-Jun</p>
                             <p class="date2" id="famnit-date2">2018</p>
                         </div>
-                        <p class="school-desc">
-                            Erasmus + in Slovenia <br>
-                            CS bachelor programm <br>
-                        </p>
+                        <div class="school-desc-container">
+                            <p class="school-desc">
+                                Erasmus + in Slovenia <br>
+                                CS bachelor programm <br>
+                            </p>
+                        </div>
                     </div>
                 </div>
                 <div id="uqac" class="univ">
@@ -108,16 +145,18 @@
                             <div class="line"></div>
                             <p class="date2" id="uqac-date2">2023</p>
                         </div>
-                        <p class="school-desc">
-                            International Exchange<br>
-                            Master in CS<br>
-                        </p>
+                        <div class="school-desc-container">
+                            <p class="school-desc">
+                                International Exchange<br>
+                                Master in CS<br>
+                            </p>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
         <div id="work-experiences">
-            <h2 class="section-title" id="work-experineces-title">Work Experiences</h2>
+            <h2 class="section-title" id="work-experiences-title">Work Experiences</h2>
             <div id="arrow-container">
                 <div id="arrow">
                     <div id="arrow-line"></div>
@@ -148,7 +187,7 @@
                     </div>
                 </div>
                 <div id="mage" class="enterprise">
-                    <img src="media/mu_cymk_03.png">
+                    <img src="media/mage.png">
                     <div class="enterprise-desc">
                         <h3 class="enterprise-title">MAGE-UQAC</h3>
                         <p class="date">2023</p>
@@ -159,7 +198,7 @@
                 </div>
             </div>
         </div>
-        <footer id="contact">
+        <footer id="footer">
             <li>
                 <ul id="linkedin"><img src="media/linkedin-logo.png"><p>victor-mira-56b255174</p></ul>
                 <ul id="github"><img src="media/github-logo.png"><p>victor-mira</p></ul>
