small fix on project title

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 <div id="opencv-segmentation" class="project-container">
                     <img src="media/opencv_segmentation.jpg">
                     <div class="project-text">
-                        <h3 class="project-title">Items detector with openCV ></h3>
+                        <h3 class="project-title">Rocks segmentation with openCV ></h3>
                         <div class="project-description">
                             <p >
                                 Segmentation of rocks with image pretreament and watershed method
