--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
         </div>
         <footer id="footer">
             <li>
-                <ul id="linkedin"><img src="media/linkedin-logo.png"><p>victor-mira-56b255174</p></ul>
+                <ul id="linkedin"><img src="media/linkedin-logo.png"><p>victor-romain-mira</p></ul>
                 <ul id="github"><img src="media/github-logo.png"><p>victor-mira</p></ul>
                 <ul id="phone-number"><img src="media/phone.png"> <p>+33 6 27 24 66 84</p></ul>
                 <ul id="mail"><img src="media/mail.png"><p>victor.romain.mira@gmail.com</p></ul>
